feat: 위키 페이지 작성

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>자기소개 위키 페이지</title>
+    <title>포포 위키</title>
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/index.js"></script>
   </head>
@@ -16,50 +16,104 @@
         </h1>
       </header>
       <main>
-        <h2 class="title">크론</h2>
+        <h2 class="title">포포</h2>
         <hr />
         <section>
-          <h3 class="subtitle">자기소개</h3>
+          <h3 id="me" class="subtitle">자기소개</h3>
           <p>
-            안녕하세요, 저는 끊임없이 새로운 도전을 통해 성장하는 것을 즐기는 크론이에요. 안정적인 삶에서 벗어나 세 번의
-            큰 전환점을 겪으며 지금의 제가 되었어요. 어제보다 더 나은 오늘의 나를 만들기 위해 노력하고 있죠. 매일의 작은
-            성취들이 모여 제가 한 걸음 더 성장했다는 것을 느낄 때면 가슴이 벅차오르거든요. 그러다 문득, 저처럼 변화를
-            갈망하며 도전을 꿈꾸는 분들이 많다는 것을 알게 되었어요. 나의 성장도 의미 있지만, 누군가의 성장을 함께할 수
-            있다는 건 매일 새로운 설렘을 주는 일이에요.
+            안녕하세요, 저는 끊임없이 학습하고 성장하기를 좋아하는 포포에요. 현재 위치에서 멈추지 않고 계속해서 성장하기 위해
+            노력하고 있어요. 매일 스스로와의 약속을 하고 그 약속을 지키면서 성취감을 느끼고, 그 결과 자신감과 재미를 느끼며
+            살아가고 싶고, 그렇게 하려고 노력하고 있어요. 주변 사람들과도 이 소소한 행복을 나누고 싶네요.
           </p>
         </section>
 
         <section>
-          <h3 class="subtitle">나를 울린 인생 작품</h3>
+          <h3 id="gallery" class="subtitle">나만의 갤러리</h3>
           <article>
-            <h4>인생 영화</h4>
-            <div class="thumbnail">
-              <img
-                src="https://image.tmdb.org/t/p/w1280/u8ffl7CRAS12KA8eQEtkLuHg8Fm.jpg"
-                width="200"
-                alt="그래비티 영화 포스터"
-              />
-            </div>
-            <p>
-              알폰소 쿠아론 감독이 연출하고 샌드라 불럭이 주연으로 출연하는 영화 「그래비티」는 우주 정거장에서 임무
-              수행 중 고립된 한 우주인의 생존과 귀환을 그린 작품이다. 대학생 시절 처음 본 이 영화는 당시엔 그저 지루한
-              우주 영화였다. 그런데 이 영화를 다시 보니, 마치 내 미래를 미리 보여준 복선과도 같다는 점을 깨달았다.
-            </p>
+            <h4>기억에 남는 여행지</h4>
+            <table id="gallery">
+              <tr>
+                <td><img src="./images/trip/1.JPG" alt="1"></td>
+                <td><img src="./images/trip/2.jpg" alt="2"></td>
+                <td><img src="./images/trip/3.jpg" alt="3"></td>
+              </tr>
+              <tr>
+                <td><img src="./images/trip/4.jpg" alt="4"></td>
+                <td><img src="./images/trip/5.jpg" alt="5"></td>
+                <td><img src="./images/trip/6.jpeg" alt="6"></td>
+              </tr>
+              <tr>
+                <td><img src="./images/trip/7.jpg" alt="7"></td>
+                <td><img src="./images/trip/8.jpg" alt="8"></td>
+                <td><img src="./images/trip/9.jpg" alt="9"></td>
+              </tr>
+            </table>
           </article>
         </section>
 
         <section>
-          <div class="comment-writing-container">
-            <form>
-              <fieldset>
-                <legend>댓글 쓰기</legend>
-                <textarea
-                  placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
-                ></textarea>
-              </fieldset>
+          <h3 id="product" class="subtitle">나를 울린 인생 작품</h3>
+
+          <article>
+            <h4>인생 영화</h4>
+            <div class="thumbnail">
+              <img
+                src="./images/interstellar.jpeg"
+                width="200"
+                alt="인터스텔라 영화 포스터"
+              />
+            </div>
+            <p>
+              크리스토퍼 놀란 감독이 연출하고 매튜 매커너히가 주연으로 출연하는 영화 「인터스텔라」는 점점 황폐해져가는 지구를 대체할 인류의 터전을 찾기 위해
+              새롭게 발견된 웜홀을 통해 항성 간(Interstellar) 우주여행을 떠나는 탐험가들의 모험이 연대기 순으로 그린 작품이다.
+            </p>
+            <p>
+              학창시절 이 영화를 처음 봤을 때 신비로운 우주의 매력에 매료되었다. 인류의 미래라는 막대한 책임을 등에 지고 먼 우주로 나아가는 등장인물들이 멋있었다.
+              특히, 최선의 선택을 위해 듣기만 해도 어려운 시간, 거리, 자원을 계산하여 근거를 가지고 판단하는 모습이 내 마음을 사로잡았다.
+              <br>
+              <span style="color: cadetblue;"><b>우린 답을 찾을것이다. 늘 그랬듯이.</b></span> 라는 포스터의 문장처럼, 나도 새로운 도전을 할 때마다
+              이 문장으로 자신감을 가지곤 한다. 나도 이렇게 전문가다운 모습을 가지고싶다고 생각하게 만들어 준 영화였다.
+            </p>
+          </article>
+          <hr/>
+
+          <article>
+            <h4>인생 노래</h4>
+            <div class="thumbnail">
+              <img
+                src="https://image.bugsm.co.kr/album/images/200/4377/437787.jpg?version=20181203175140.0"
+                width="200"
+                alt="Lost Stars 노래 포스터"
+              />
+            </div>
+            <p>
+              Lost Stars는 마룬 5의 보컬리스트이자 배우인 애덤 리바인의 노래로, 본래 뮤지컬 로맨틱 코메디 영화 《비긴 어게인》의 배경음악이다.
+              비긴 어게인을 보면서 영화관에서 Lost Stars를 들었을 때 감성에 젖었다.
+            </p>
+            <p>
+              <b>길 잃은 별들</b>이라는 의미의 제목과 가사를 통해 노래는 
+              <span style="color: cadetblue;"><b>한 때의 찬란한 젊음은 빛을 발하며 소멸됩니다. 마치 목적 없이 존재하는 별처럼</b></span>
+              이라는 의미를 전달한다. 영화관에서의 피부로 느껴지는 웅장한 오디오와 멜로디, 그리고 노래가 전달하고자 하는 메세지는 그 자체로 내게 동기를 부여해주었다.
+              그래서 들을 때마다 신기하게 위로가 되면서 동기부여가 되는 인생 노래이다.
+            </p>
+          </article>
+        </section>
+
+        <hr />
+
+        <section>
+          <div id="talk" class="comment-writing-container">
+            <form id="new-comment">
+              <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+              <textarea id="commentText"
+                placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
+              ></textarea>
+              <input id="resetButton" type="reset" value="취소">
+              <input id="submitButton" type="button" value="등록">
             </form>
           </div>
-          <ul class="comment-list">
+          
+          <ul id="comments" class="comment-list">
             <li>
               <div class="comment-item">
                 <div class="comment-author">
@@ -109,21 +163,23 @@
         </footer>
       </main>
       <aside class="right-sidebar">
-        <div class="profile-image">크론 프로필 이미지</div>
+        <div class="profile-image">
+          <img src="./images/profile.jpg" alt="">
+        </div>
         <nav>
           <h2>Contents</h2>
           <ol class="contents">
             <li>
-              <a href="#">자기소개</a>
+              <a href="#me">자기소개</a>
             </li>
             <li>
-              <a href="#">나만의 갤러리</a>
+              <a href="#gallery">나만의 갤러리</a>
             </li>
             <li>
-              <a href="#">나를 울린 인생 작품</a>
+              <a href="#product">나를 울린 인생 작품</a>
             </li>
             <li>
-              <a href="#">감상평</a>
+              <a href="#talk">감상평</a>
             </li>
           </ol>
         </nav>
