fix: 사진이 안보이던 버그 수정

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h4>기억에 남는 여행지</h4>
             <table id="gallery">
               <tr>
-                <td><img src="./images/trip/1.JPG" alt="1"></td>
+                <td><img src="./images/trip/1.jpg" alt="1"></td>
                 <td><img src="./images/trip/2.jpg" alt="2"></td>
                 <td><img src="./images/trip/3.jpg" alt="3"></td>
               </tr>
@@ -112,7 +112,7 @@
               <input id="submitButton" type="button" value="등록">
             </form>
           </div>
-          
+
           <ul id="comments" class="comment-list">
             <li>
               <div class="comment-item">
